tests/errors/export_private.ail
-- Test MOD_EXPORT_PRIVATE: Export of underscore-prefixed name
module tests/errors/export_private

-- This should fail: cannot export a private (underscore-prefixed) function
export func _privateFunction(x: int) -> int {
  x * 2
}

-- This is fine: public function
export func publicFunction(x: int) -> int {
  x + 1
}